<resources>
    <string name="app_name">AcademyTlvMovies</string>
    <string name="title">Android Academy Fundamentals Course 2018</string>
    <string name="da_movie_title_avengers">Avengers: Infinity War</string>
    <string name="release_date_title">Released:</string>
    <string name="release_date">2018-01-01</string>
    <string name="movie_trailer_btn">movie trailer</string>
    <string name="overview_title">Overview:</string>
    <string name="overview_text">Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2012\'s The Avengers and 2015\'s Avengers: Age of Ultron, and the nineteenth film in the Marvel Cinematic Universe (MCU). The film is directed by Anthony and Joe Russo, written by Christopher Markus and Stephen McFeely, and features an ensemble cast including Robert Downey Jr., Chris Hemsworth, Mark Ruffalo, Chris Evans, Scarlett Johansson, Benedict Cumberbatch, Don Cheadle, Tom Holland, Chadwick Boseman, Paul Bettany, Elizabeth Olsen, Anthony Mackie, Sebastian Stan, Danai Gurira, Letitia Wright, Dave Bautista, Zoe Saldana, Josh Brolin, and Chris Pratt. In the film, the Avengers and the Guardians of the Galaxy attempt to stop Thanos from amassing the all-powerful Infinity Stones. The film was announced in October 2014 as Avengers: Infinity War – Part 1. The Russo brothers came on board to direct in April 2015 and by May, Markus and McFeely had signed on to write the script for the film, which drew inspiration from Jim Starlin\'s 1991 The Infinity Gauntlet comic and Jonathan Hickman\'s 2013 Infinity comic. In 2016, Marvel shortened the title to Avengers: Infinity War. Filming began in January 2017 at Pinewood Atlanta Studios in Fayette County, Georgia, with a large cast consisting mostly of actors reprising their roles from previous MCU films. The production lasted until July 2017, shooting back-to-back with an untitled direct sequel. Additional filming took place in Scotland, England, the Downtown Atlanta area, and New York City. With an estimated budget in the range of $316–400 million, it is one of the most expensive films ever made. Avengers: Infinity War held its world premiere on April 23, 2018 in Los Angeles and was released in the United States on April 27, 2018, in IMAX and 3D. The film received praise for the performances of the cast (particularly Brolin\'s) and the emotional weight of the story, as well as the visual effects and action sequences. It was the fourth film and the first superhero film to gross over $2 billion worldwide, breaking numerous box office records and becoming the highest-grossing film of 2018, as well as the fourth-highest-grossing film of all time and in the United States and Canada. The currently untitled sequel is set to be released on May 3, 2019.</string>
    <string name="poster_description">portrait image</string>
    <string name="landscape_poster_description">landscape poster</string>
    <string name="im_default_overview">Overview</string>
    <string name="im_default_title">Title</string>
</resources>
