<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/poster_landscape_iv"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/avengers"
        android:contentDescription="@string/landscape_poster_description" />

    <ImageView
        android:id="@+id/poster_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster_landscape_iv"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_landscape_iv"
        app:srcCompat="@drawable/avengers_poster"
        android:contentDescription="@string/poster_description" />

    <TextView
        android:id="@+id/item_movie_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/da_movie_title_avengers"
        android:textColor="@color/movieTitle"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/poster_iv"
        app:layout_constraintTop_toTopOf="@+id/poster_iv" />

    <TextView
        android:id="@+id/release_date_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release_date_title"
        android:textColor="@color/released_title_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/item_movie_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/item_movie_tv_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/release_date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/release_date_tv_title"
        app:layout_constraintStart_toEndOf="@+id/release_date_tv_title"
        app:layout_constraintTop_toTopOf="@+id/release_date_tv_title" />

    <Button
        android:id="@+id/movie_trailer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_trailer_btn"
        app:layout_constraintStart_toStartOf="@+id/release_date_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/release_date_tv_title" />

    <TextView
        android:id="@+id/overview_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/overview_title"
        android:textColor="@color/released_title_black"
        app:layout_constraintStart_toStartOf="@+id/poster_iv"
        app:layout_constraintTop_toBottomOf="@+id/poster_iv" />

    <ScrollView
        android:id="@+id/description_sv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_title_tv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="398dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>